Add and apply checkstyle and PMD